[package]
name = "hulypulse"
version = "0.1.31"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
anyhow = "1.0.97"
config = "0.15.4"
serde = { version = "1.0.219", features = ["derive"] }
actix = "0.13.5"
actix-web = "4.10.2"
actix-cors = "0.7.1"
actix-web-actors = "4.2.0"
redis = { version = "=0.32.5", features = ["aio", "tokio-comp", "sentinel"] }
md5 = "0.8.0"
serde_with = "3"
url = "2"
size = { version = "0.5.0", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
hex = "0.4.3"
serde_json = "1.0"
hulyrs = { git = "https://github.com/hcengineering/hulyrs.git", features = [
    "actix",
] }
secrecy = "0.10.3"
tokio-stream = "0.1"
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
regorus = "0.5.0"


[[bin]]
name = "hulypulse"
path = "src/main.rs"

[dev-dependencies]
tokio-tungstenite = { version = "0.21", default-features = false, features = [
    "rustls-tls-native-roots",
    "connect",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3"
serde_json = "1"
uuid = "1"
