[package]
name = "hulypulse"
version = "0.3.3"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
config = { version = "0.15", default-features = false, features = ["json", "toml"] }
anyhow = "1.0.97"
serde = { version = "1.0.219", features = ["derive"] }
serde_with = "3"
serde_json = "1.0"
actix-web = { version = "4.10", default-features = false, features = ["macros"] }
actix-cors = "0.7.1"
actix-ws = "0.3.0"
md5 = "0.8.0"
url = "2"
hex = "0.4.3"
tokio-stream = "0.1"
strum = { version = "0.27.2", features = ["derive"] }
futures-util = "0.3"

# auth:
regorus = { version  = "0.5.0", optional = true }
uuid = { version = "1.7", features = ["v4", "serde"], optional = true }
hulyrs = { git = "https://github.com/hcengineering/hulyrs.git", features = [ "actix" ], optional = true }
secrecy = { version = "0.10.3", optional = true }

#redis
redis = { version = "=0.32.5", features = ["aio", "tokio-comp", "sentinel"], optional = true }

[[bin]]
name = "hulypulse"
path = "src/main.rs"

[dev-dependencies]
tokio-tungstenite = { version = "0.21", default-features = false, features = [
    "rustls-tls-native-roots",
    "connect",
] }

[features]
default = ["db-redis","auth"]
auth = ["regorus", "uuid", "hulyrs", "secrecy"]
db-redis = ["redis"]