[package]
name = "hulylake"
version = "0.1.8"
edition = "2024"
rust-version = "1.88.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
anyhow = "1.0.99"
config = "0.15.14"
serde = "1.0.219"
actix-web = "4.11.0"
actix-cors = "0.7.1"
refinery = { version = "0.8.16", features = ["tokio-postgres"] }
tokio-postgres = { version = "0.7.13", features = [
    "with-uuid-1",
    "with-serde_json-1",
    "with-chrono-0_4",
] }
bb8 = "0.9.0"
bb8-postgres = { version = "0.9.0", features = ["with-uuid-1"] }
md5 = "0.8.0"
size = { version = "0.5.0", features = ["serde"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
serde_json = "1.0"
hulyrs = { git = "https://github.com/hcengineering/hulyrs.git", features = [
    "actix",
] }
secrecy = "0.10.3"
tracing-actix-web = "0.7.19"
aws-config = { version = "1.8.5" }
aws-sdk-s3 = "1.103.0"
futures-util = "0.3.31"
tokio-stream = "0.1.17"
thiserror = "2.0.16"
bytes = "1.10.1"
ksuid = "0.2.0"
tracing-opentelemetry = "0.31.0"
mime = "0.3.17"
async-stream = "0.3.6"
blake3 = "1.8.2"
futures = "0.3.31"
strum = { version = "0.27.2", features = ["derive"] }
json-patch = "4.0.0"
jsonptr = "0.7.1"
chrono = { version = "0.4.42", features = ["now"] }
