[package]
name = "tests"
version = "0.1.0"
edition = "2024"

[dependencies]
tanu = "0.9.0"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.0" }
hulyrs = { git = "https://github.com/hcengineering/hulyrs.git", features = [
    "actix",
] }
secrecy = "0.10.3"
reqwest = "0.12.23"
rand = "0.9.2"
hex = "0.4.3"
serde_json = "1.0.143"
